--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-spring.application.name=treeify3
+# Database Configuration
+spring.datasource.url=jdbc:sqlserver://localhost:3306;databaseName=treeify3
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.username=root
+spring.datasource.password=Keyin2021
+spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
+
+# Server Port
+server.port=8080
